form validation of contact page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- Swiper JS -->
-    <script src="./JS/swiper-bundle.min.js" defer></script>
+
     <!-- JS -->
+    <!-- <script src="./JS/data/food.js" defer></script> -->
+    <script src="./JS/swiper-bundle.min.js" defer></script>
     <script src="./JS/index.js" defer></script>
+
     <title>AFRIFOOD</title>
   </head>
 
@@ -65,11 +68,11 @@
       </section>
       <section class="foodSlider">
         <div class="foodSlider_wrapper foodSwiper">
-          <div class="slider--content swiper-wrapper">
+          <div class="slider--content swiper-wrapper" id="slider">
             <div class="slide swiper-slide">
               <img src="./Assets/food/Egypt/tarb_Egypt.jpg" alt="" srcset="" />
               <div>
-                <span>food</span>
+                <span>foodsss</span>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Magnam eius tempore architecto!
@@ -83,7 +86,7 @@
                 srcset=""
               />
               <div>
-                <span>food</span>
+                <span>fooduu</span>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Magnam eius tempore architecto!
@@ -97,7 +100,7 @@
                 srcset=""
               />
               <div>
-                <span>food</span>
+                <span>foodnono</span>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Magnam eius tempore architecto!
@@ -111,7 +114,7 @@
                 srcset=""
               />
               <div>
-                <span>food</span>
+                <span>foodyyy</span>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Magnam eius tempore architecto!
