addiding food items

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <input type="checkbox" id="checkbox_toggle" />
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
           <div class="nav_list--Menu">
-            <li class="nav_listItem"><a href="#">Home</a></li>
+            <li class="nav_listItem"><a href="./index.html">Home</a></li>
             <li class="nav_listItem menu--item">
               <a href="#countries-food">Countries Food</a>
               <div class="dropdown-options">
@@ -69,62 +69,56 @@
       <section class="foodSlider">
         <div class="foodSlider_wrapper foodSwiper">
           <div class="slider--content swiper-wrapper" id="slider">
-            <div class="slide swiper-slide">
-              <img src="./Assets/food/Egypt/tarb_Egypt.jpg" alt="" srcset="" />
-              <div>
-                <span>foodsss</span>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Magnam eius tempore architecto!
-                </p>
+            <div class="slide">
+              <img
+                src="./Assets/food/Egypt/tarb_Egypt.jpg"
+                alt="Tarb Egyptian food"
+              />
+              <div class="slide_info">
+                <h3 class="slide_title">Tarb-Egyptian Recipy</h3>
               </div>
             </div>
-            <div class="slide swiper-slide">
+            <div class="slide">
               <img
-                src="./Assets/food/Egypt/koshary_egypt.jpg"
-                alt=""
-                srcset=""
+                src="./Assets/food/Nigeria/Nkwobi-683x1024.jpg"
+                alt="Nkwobi Nigeria food"
               />
-              <div>
-                <span>fooduu</span>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Magnam eius tempore architecto!
-                </p>
+              <div class="slide_info">
+                <h3 class="slide_title">Nkwobi- Nigerian Recipy</h3>
               </div>
             </div>
-            <div class="slide swiper-slide">
+            <div class="slide">
               <img
-                src="./Assets/food/Egypt/koshary_egypt.jpg"
-                alt=""
-                srcset=""
+                src="./Assets/food/Dr. Congo/chicken-moambe-congo.webp"
+                alt="Chicken Moambe Dr. congo food"
               />
-              <div>
-                <span>foodnono</span>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Magnam eius tempore architecto!
-                </p>
+              <div class="slide_info">
+                <h3 class="slide_title">Chicken Moambe-Dr. Congo Recipy</h3>
               </div>
             </div>
-            <div class="slide swiper-slide">
+            <div class="slide">
               <img
-                src="./Assets/food/Egypt/koshary_egypt.jpg"
-                alt=""
+                src="./Assets/food/SA/bobotie_SA.jpg"
+                alt="Bobotie southAfrican  food"
                 srcset=""
               />
-              <div>
-                <span>foodyyy</span>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Magnam eius tempore architecto!
-                </p>
+              <div class="slide_info">
+                <h3 class="slide_title">Bobatie - SA Recipy</h3>
+              </div>
+            </div>
+            <div class="slide">
+              <img
+                src="./Assets/food/Ethiopia/ethiopian-food-injera2.jpg.webp"
+                alt="Injera Ethiopian food"
+                srcset=""
+              />
+              <div class="slide_info">
+                <h3 class="slide_title">Injera - Ethiopian Recipy</h3>
               </div>
             </div>
           </div>
           <div class="swiper-button-next nav-btn"></div>
           <div class="swiper-button-prev nav-btn"></div>
-          <div class="swiper-pagination"></div>
         </div>
       </section>
       <section class="about">
@@ -137,7 +131,7 @@
             mauris suspendisse ullamcorper nibh pellentesque scelerisque
             torquent, turpis quam pharetra ligula accumsan aenean.
           </p>
-          <a href="" class="btn btn-login">Read more African Fo0od</a>
+          <a href="" class="btn btn-color">Read more African Food</a>
         </div>
       </section>
       <section class="food" id="countries-food">
@@ -153,7 +147,7 @@
               />
 
               <div>
-                <h3 class="food-name">Kwanga</h3>
+                <h4 class="food-name">Kwanga</h4>
                 <p class="food-description">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -170,7 +164,7 @@
               />
 
               <div>
-                <h3 class="food-name">Caakiri</h3>
+                <h4 class="food-name">Caakiri</h4>
                 <p class="food-description">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -188,7 +182,7 @@
               />
 
               <div>
-                <h3 class="food-name">Jollof Rice</h3>
+                <h4 class="food-name">Jollof Rice</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -205,7 +199,7 @@
               />
 
               <div>
-                <h3 class="food-name">Suya</h3>
+                <h4 class="food-name">Suya</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -223,7 +217,7 @@
               />
 
               <div>
-                <h3 class="food-name">Beyayenetu</h3>
+                <h4 class="food-name">Beyayenetu</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -240,7 +234,7 @@
               />
 
               <div>
-                <h3 class="food-name">Doro Wet</h3>
+                <h4 class="food-name">Doro Wet</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -258,7 +252,7 @@
               />
 
               <div>
-                <h3 class="food-name">Tarb</h3>
+                <h4 class="food-name">Tarb</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -275,7 +269,7 @@
               />
 
               <div>
-                <h3 class="food-name">Molokhiya</h3>
+                <h4 class="food-name">Molokhiya</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -293,7 +287,7 @@
               />
 
               <div>
-                <h3 class="food-name">Bobotie</h3>
+                <h4 class="food-name">Bobotie</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -310,7 +304,7 @@
               />
 
               <div>
-                <h3 class="food-name">Vetkoek</h3>
+                <h4 class="food-name">Vetkoek</h4>
                 <p class="food-name">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit eros
                   dignissim nibh, lectus sollicitudin inceptos mus facilisi
@@ -457,12 +451,12 @@
               placeholder="Enter your eamil"
             />
 
-            <button type="submit" class="btn btn-login">Subscribe</button>
+            <button type="submit" class="btn btn-color">Subscribe</button>
           </form>
         </div>
 
         <div class="locations">
-          <h3 class="footer--title">Location</h3>
+          <h4 class="footer--title">Location</h4>
           <ul class="footer--list">
             <li class="footer--listItems">
               <a href="./pages/nigeria.html" class="countries">Nigeria</a>
@@ -484,7 +478,7 @@
           </ul>
         </div>
         <div class="quickLinks">
-          <h3 class="footer--title">Links</h3>
+          <h4 class="footer--title">Links</h4>
           <ul class="footer--list">
             <li class="footer--listItems">
               <a href="#" class="quickLinks--link">Home</a>
@@ -501,7 +495,7 @@
           </ul>
         </div>
         <div class="social">
-          <h3 class="footer--title">Contact Us</h3>
+          <h4 class="footer--title">Contact Us</h4>
           <ul class="socialIcons">
             <li class="socialIcons__items">
               <a href="" class="social"
