--- a/pages/egypt.html
+++ b/pages/egypt.html
@@ -4,9 +4,415 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/media.css">
+    <script src="../JS/main.js" defer></script>
     <title>Egyptian Food</title>
 </head>
 <body>
+  <nav class="nav_bar">
+    <div class="nav_wrapper">
+      <div>
+        <img src="../Assets/logo.jpg" alt="" class="logo" />
+        <span class="logo--name">AFRIFOOD</span>
+      </div>
+      <ul class="nav_list">
+        <input type="checkbox" id="checkbox_toggle" />
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+        <div class="nav_list--Menu">
+          <li class="nav_listItem"><a href="../index.html">Home</a></li>
+          <li class="nav_listItem menu--item">
+            <a href="#egyptian-food">Countries Food</a>
+            <div class="dropdown-options">
+              <a href="../pages/nigeria.html">Nigeria</a>
+              <a href="../pages/ethiopia.html">Ethiopia</a>
+              <a href="../pages/southafrican.html">South Africa</a>
+              <a href="#">Egypt</a>
+              <a href="../pages/drcongo.html">Dr.Congo</a>
+
+              <!-- <a href="#">Logout</a> -->
+            </div>
+          </li>
+          <li class="nav_listItem"><a href="./about.html">About</a></li>
+          <li class="nav_listItem"><a href="./contact.html">Contact</a></li>
+          <!-- <li class="nav_listItem"><a href="./login.html">Login</a></li> -->
+        </div>
+      </ul>
+    </div>
+  </nav>
+  <main class="main">
+    <section class="food" id="egyptian-food">
+      <div class="food_wrapper">
+        <h2 class="subTitle">Food</h2>
+        <div class="min_wrapper">
+          <!-- Dr. Congo food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/amalaEwedoSoup_nigeria.webp"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">AmalaEwedoSoup</h3>
+              <p class="food-description">
+                Yam flour is cooked until it forms a smooth, fluffy side dish
+                that can be served with a variety of soups, such as the
+                flavorful Ewudu.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Fried-Ripe-Plantains-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Fried Ripe</h3>
+              <p class="food-description">
+                Fried plantains are a big part of Caribbean, Asian and African
+                cuisine. In Yoruba, it’s called Dodo and it’s served with
+                everything from Jollof rice to savory stews.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- Nigerian food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Fufu-1-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Jollof Rice</h3>
+              <p class="food-name">
+                n Central and Western Africa, fufu is any variety of starchy
+                food that has been mashed and shaped into balls and eaten as a
+                staple. Fufu can be made with yam, cassava or other ground
+                provisions. Served it with soup, stew, or sauce. So satisfying
+                and delicious!
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Iyan-Pounded-Yam-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Iyan Pounded</h3>
+              <p class="food-name">
+                If you like mashed potatoes, you’re sure to enjoy pounded yam.
+                This tasty staple is super filling and can be served with
+                traditional African soups and stews.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- Ethiopian food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Garri-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Garri</h3>
+              <p class="food-name">
+                Looking for something new and wholesome to add to your
+                breakfast menu? Garri is a Nigerian cereal made with cassava
+                and milk. Toppings like nuts and berries make this dish even
+                tastier.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Grilled-Plantain-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Boli</h3>
+              <p class="food-name">
+                This popular Nigerian street food features sweet ripe
+                plantains coated in olive oil, delicately seasoned and grilled
+                to perfection.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- Egyptian food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Eba-Cassava-Meal-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Eba Cassava</h3>
+              <p class="food-name">
+                Eba food is a traditional staple made from cassava. It can be
+                paired with other tasty Nigerian dishes such as Okro soup or
+                meat stew.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Nkwobi-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Nkwobi</h3>
+              <p class="food-name">
+                In eastern Nigeria, Nkwobi is served in popular restaurants
+                and is considered a delicacy. This spicy dish is made with cow
+                foot, which is seasoned and pressure cooked until tender.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- South African food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Chicken-Empanadas-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Bobotie</h3>
+              <p class="food-name">
+                If you’re a fan of Mexican empanadas, expand your palate by
+                trying the Nigerian meat pie. Ground beef is seasoned and
+                cooked with diced potatoes and carrots, then stuffed inside a
+                flaky, savory pastry.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Nigerian-Buns-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Nigerian Buns</h3>
+              <p class="food-name">
+                These sweet buns are beyond tasty and are ready in only 15
+                minutes. You’re sure to love the sweet, crunchy texture and
+                rich vanilla flavor.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="min_wrapper">
+          <!-- Dr. Congo food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/amalaEwedoSoup_nigeria.webp"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">AmalaEwedoSoup</h3>
+              <p class="food-description">
+                Yam flour is cooked until it forms a smooth, fluffy side dish
+                that can be served with a variety of soups, such as the
+                flavorful Ewudu.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Fried-Ripe-Plantains-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Fried Ripe</h3>
+              <p class="food-description">
+                Fried plantains are a big part of Caribbean, Asian and African
+                cuisine. In Yoruba, it’s called Dodo and it’s served with
+                everything from Jollof rice to savory stews.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- Nigerian food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Fufu-1-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Jollof Rice</h3>
+              <p class="food-name">
+                n Central and Western Africa, fufu is any variety of starchy
+                food that has been mashed and shaped into balls and eaten as a
+                staple. Fufu can be made with yam, cassava or other ground
+                provisions. Served it with soup, stew, or sauce. So satisfying
+                and delicious!
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Iyan-Pounded-Yam-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Iyan Pounded</h3>
+              <p class="food-name">
+                If you like mashed potatoes, you’re sure to enjoy pounded yam.
+                This tasty staple is super filling and can be served with
+                traditional African soups and stews.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- Ethiopian food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Garri-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Garri</h3>
+              <p class="food-name">
+                Looking for something new and wholesome to add to your
+                breakfast menu? Garri is a Nigerian cereal made with cassava
+                and milk. Toppings like nuts and berries make this dish even
+                tastier.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Grilled-Plantain-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Boli</h3>
+              <p class="food-name">
+                This popular Nigerian street food features sweet ripe
+                plantains coated in olive oil, delicately seasoned and grilled
+                to perfection.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- Egyptian food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Eba-Cassava-Meal-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Eba Cassava</h3>
+              <p class="food-name">
+                Eba food is a traditional staple made from cassava. It can be
+                paired with other tasty Nigerian dishes such as Okro soup or
+                meat stew.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Nkwobi-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Nkwobi</h3>
+              <p class="food-name">
+                In eastern Nigeria, Nkwobi is served in popular restaurants
+                and is considered a delicacy. This spicy dish is made with cow
+                foot, which is seasoned and pressure cooked until tender.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <!-- South African food -->
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Chicken-Empanadas-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Bobotie</h3>
+              <p class="food-name">
+                If you’re a fan of Mexican empanadas, expand your palate by
+                trying the Nigerian meat pie. Ground beef is seasoned and
+                cooked with diced potatoes and carrots, then stuffed inside a
+                flaky, savory pastry.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+          <div class="min_wrapper-box">
+            <img
+              src="../Assets/food/Nigeria/Nigerian-Buns-683x1024.jpg"
+              alt=""
+              class="food-img"
+            />
+
+            <div>
+              <h3 class="food-name">Nigerian Buns</h3>
+              <p class="food-name">
+                These sweet buns are beyond tasty and are ready in only 15
+                minutes. You’re sure to love the sweet, crunchy texture and
+                rich vanilla flavor.
+              </p>
+              <a href="" class="readMore">read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="navigate_wrapper">
+          <a href="#" class="navigate next">1</a>
+          <a href="#" class="navigate prev">2</a>
+        </div>
+      </div>
+    </section>
+  </main>
     <footer>
         <div class="footer_wrapper">
           <div class="footer__logo">
@@ -28,19 +434,19 @@
             <h3 class="footer--title">Location</h3>
             <ul class="footer--list">
               <li class="footer--listItems">
-                <a href="" class="countries">Nigeria</a>
+                <a href="../pages/nigeria.html" class="countries">Nigeria</a>
               </li>
               <li class="footer--listItems">
-                <a href="" class="countries">Ethiopia</a>
+                <a href="../pages/ethiopia.html" class="countries">Ethiopia</a>
               </li>
               <li class="footer--listItems">
-                <a href="" class="countries">South Africa</a>
+                <a href="../pages/southafrican.html" class="countries">South Africa</a>
               </li>
               <li class="footer--listItems">
-                <a href="" class="countries">Egypt</a>
+                <a href="#" class="countries">Egypt</a>
               </li>
               <li class="footer--listItems">
-                <a href="" class="countries">Dr. Congo</a>
+                <a href="../pages/drcongo.html" class="countries">Dr. Congo</a>
               </li>
             </ul>
           </div>
@@ -48,16 +454,16 @@
             <h3 class="footer--title">Links</h3>
             <ul class="footer--list">
               <li class="footer--listItems">
-                <a href="#" class="quickLinks--link">Home</a>
+                <a href="../index.html" class="quickLinks--link">Home</a>
               </li>
               <li class="footer--listItems">
-                <a href="./about.html" class="quickLinks--link">About</a>
+                <a href="../pages/about.html" class="quickLinks--link">About</a>
               </li>
               <li class="footer--listItems">
-                <a href="./food.html" class="quickLinks--link">Menu</a>
+                <a href="../pages/food.html" class="quickLinks--link">Menu</a>
               </li>
               <li class="footer--listItems">
-                <a href="./contact.html" class="quickLinks--link">Contact</a>
+                <a href="../pages/contact.html" class="quickLinks--link">Contact</a>
               </li>
             </ul>
           </div>
