deletion of some items and modifying css

--- a/pages/about.html
+++ b/pages/about.html
@@ -10,9 +10,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../CSS/nav.css">
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/about.css" />
-    <link rel="stylesheet" href="../CSS/media.css" />
+   <link rel="stylesheet" href="../CSS/footer.css">
 
     <!-- <script src="../JS/index.js" defer></script> -->
     <title>About</title>
@@ -65,7 +66,7 @@
               nibh convallis fringilla etiam mauris a fermentum massa vitae
               rhoncus, mi odio ullamcorper lacus tortor tincidunt sem inceptos.
             </p>
-            <a href="" class="btn btn-login">Read more African Food</a>
+            <a href="" class="btn btn-color">Read more African Food</a>
           </div>
         </div>
       </section>
