--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS -->
+    <link rel="stylesheet" href="../CSS/nav.css">
     <link rel="stylesheet" href="../CSS/style.css" />
 
     <link rel="stylesheet" href="../CSS/contact.css" />
-    <link rel="stylesheet" href="../CSS/media.css" />
+    <link rel="stylesheet" href="../CSS/footer.css" />
     <!-- JS -->
-    <script src="../JS/contact.js" defer></script>
+    <!-- <script src="../JS/contact.js" defer></script> -->
     <title>Contact Us</title>
   </head>
   <body>
@@ -34,12 +35,10 @@
                 <a href="./egypt.html">Egypt</a>
                 <a href="./drcongo.html">Dr.Congo</a>
 
-                <!-- <a href="#">Logout</a> -->
               </div>
             </li>
             <li class="nav_listItem"><a href="./about.html">About</a></li>
             <li class="nav_listItem"><a href="#">Contact</a></li>
-            <!-- <li class="nav_listItem"><a href="./login.html">Login</a></li> -->
           </div>
         </ul>
       </div>
@@ -104,7 +103,7 @@
               />
               <input type="hidden" name="_captcha" value="false" />
 
-              <button type="submit" id="submit" class="btn btn-signup">
+              <button type="submit" id="submit" class="btn btn-color">
                 Send Message
               </button>
             </form>
