--- a/pages/nigeria.html
+++ b/pages/nigeria.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/media.css" />
+    <link rel="stylesheet" href="../CSS/nav.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/countries.css">
+    <link rel="stylesheet" href="../CSS/footer.css">
     <script src="../JS/main.js" defer></script>
     <title>Nigerian Food</title>
   </head>
@@ -22,22 +24,22 @@
           <div class="nav_list--Menu">
             <li class="nav_listItem"><a href="../index.html">Home</a></li>
             <li class="nav_listItem menu--item">
-              <a href="#nigerian-food">Countries Food</a>
+              <a href="../index.html#countries-food">Countries Food</a>
               <div class="dropdown-options">
                 <a href="#">Nigeria</a>
-                <a href="../pages/ethiopia.html">Ethiopia</a>
-                <a href="../pages/southafrican.html">South Africa</a>
-                <a href="../pages/egypt.html">Egypt</a>
-                <a href="../pages/drcongo.html">Dr.Congo</a>
+                <a href="./ethiopia.html">Ethiopia</a>
+                <a href="./southafrican.html">South Africa</a>
+                <a href="./egypt.html">Egypt</a>
+                <a href="./drcongo.html">Dr.Congo</a>
 
                 <!-- <a href="#">Logout</a> -->
               </div>
             </li>
             <li class="nav_listItem">
-              <a href="../pages/about.html">About</a>
+              <a href="./about.html">About</a>
             </li>
             <li class="nav_listItem">
-              <a href="../pages/contact.html">Contact</a>
+              <a href="./contact.html">Contact</a>
             </li>
             <!-- <li class="nav_listItem"><a href="./login.html">Login</a></li> -->
           </div>
@@ -55,12 +57,12 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/amalaEwedoSoup_nigeria.webp"
-                alt=""
+                alt="amalaEwedoSoup_nigeria food"
                 class="food-img"
               />
 
               <div>
-                <h3 class="food-name">AmalaEwedoSoup</h3>
+                <h3 class="food-name">Amala Ewedo Soup</h3>
                 <p class="food-description">
                   Yam flour is cooked until it forms a smooth, fluffy side dish
                   that can be served with a variety of soups, such as the
@@ -72,7 +74,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Fried-Ripe-Plantains-683x1024.jpg"
-                alt=""
+                alt="Fried-Ripe-Plantains nigeria food"
                 class="food-img"
               />
 
@@ -90,13 +92,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Fufu-1-683x1024.jpg"
-                alt=""
+                alt="fufu nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Jollof Rice</h3>
-                <p class="food-name">
+                <p class="food-description">
                   Fufu can be made with yam, cassava or other ground
                   provisions. Served it with soup, stew, or sauce. So satisfying
                   and delicious!
@@ -107,13 +109,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Iyan-Pounded-Yam-683x1024.jpg"
-                alt=""
+                alt="Iyan-Pounded-Yam nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Iyan Pounded</h3>
-                <p class="food-name">
+                <p class="food-description">
                   If you like mashed potatoes, you’re sure to enjoy pounded yam.
                   This tasty staple is super filling and can be served with
                   traditional African soups and stews.
@@ -125,13 +127,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Garri-683x1024.jpg"
-                alt=""
+                alt="Garri nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Garri</h3>
-                <p class="food-name">
+                <p class="food-description">
                   Looking for something new and wholesome to add to your
                   breakfast menu? Garri is a Nigerian cereal made with cassava
                   and milk. Toppings like nuts and berries make this dish even
@@ -143,13 +145,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Grilled-Plantain-683x1024.jpg"
-                alt=""
+                alt="Grilled-Plantain nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Boli</h3>
-                <p class="food-name">
+                <p class="food-description">
                   This popular Nigerian street food features sweet ripe
                   plantains coated in olive oil, delicately seasoned and grilled
                   to perfection.
@@ -161,13 +163,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Eba-Cassava-Meal-683x1024.jpg"
-                alt=""
+                alt="Eba-Cassava-Meal nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Eba Cassava</h3>
-                <p class="food-name">
+                <p class="food-description">
                   Eba food is a traditional staple made from cassava. It can be
                   paired with other tasty Nigerian dishes such as Okro soup or
                   meat stew.
@@ -178,13 +180,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Nkwobi-683x1024.jpg"
-                alt=""
+                alt="Nkwobi nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Nkwobi</h3>
-                <p class="food-name">
+                <p class="food-description">
                   In eastern Nigeria, Nkwobi is served in popular restaurants
                   and is considered a delicacy. This spicy dish is made with cow
                   foot, which is seasoned and pressure cooked until tender.
@@ -196,13 +198,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Chicken-Empanadas-683x1024.jpg"
-                alt=""
+                alt="Chicken-Empanadas nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Bobotie</h3>
-                <p class="food-name">
+                <p class="food-description">
                   If you’re a fan of Mexican empanadas, expand your palate by
                   trying the Nigerian meat pie. Ground beef is seasoned and
                   cooked with diced potatoes and carrots, then stuffed inside a
@@ -211,16 +213,19 @@
                 <a href = "https://izzycooking.com/nigerian-food/" class="readMore" target="_blank">read more</a>
               </div>
             </div>
+           
+          </div>
+          <div class="min_wrapper">
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Nigerian-Buns-683x1024.jpg"
-                alt=""
+                alt="Nigerian-Buns nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Nigerian Buns</h3>
-                <p class="food-name">
+                <p class="food-description">
                   These sweet buns are beyond tasty and are ready in only 15
                   minutes. You’re sure to love the sweet, crunchy texture and
                   rich vanilla flavor.
@@ -228,12 +233,10 @@
                 <a href = "https://izzycooking.com/nigerian-food/" class="readMore" target="_blank">read more</a>
               </div>
             </div>
-          </div>
-          <div class="min_wrapper">
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Chicken-Pepper-Soup-683x1024.jpg"
-                alt=""
+                alt="Chicken-Pepper-Soup nigerian-food"
                 class="food-img"
               />
 
@@ -250,7 +253,7 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Beef-Stew-683x1024.jpg"
-                alt=""
+                alt="Beef-Stew nigerian-food"
                 class="food-img"
               />
 
@@ -268,13 +271,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Efo-Riro-Spinach-Stew-683x1024.jpg"
-                alt=""
+                alt="Efo-Riro-Spinach-Stew nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Efo Riro</h3>
-                <p class="food-name">
+                <p class="food-description">
                   This Nigerian spinach stew is like nothing you’ve ever tried
                   before. With Efo Riro, you’ll get a healthy dose of leafy
                   greens plus lots of meaty flavors.
@@ -285,13 +288,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Ofada-Stew-683x1024.jpg"
-                alt=""
+                alt="Ofada-Stew nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Ofada Stew</h3>
-                <p class="food-name">
+                <p class="food-description">
                   In many Yoruba households, Ofada stew is a delicacy saved for
                   special occasions. The delectable stew is made with goat meat,
                   smoked shrimp and lots of seasonings.
@@ -303,13 +306,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Afang-Soup-683x1024.jpg"
-                alt=""
+                alt="Afang-Soup nigerian-food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Afang Soup</h3>
-                <p class="food-name">
+                <p class="food-description">
                   The afang is a dark green leafy vegetable that’s quite similar
                   to spinach. In this quintessential Nigerian dish, afang is
                   transformed into a rich soup thanks to bone broth, palm oil,
@@ -327,7 +330,7 @@
 
               <div>
                 <h3 class="food-name">Peanout Soup</h3>
-                <p class="food-name">
+                <p class="food-description">
                   This nourishing soup can also be found in East Asia and Virginia in the United States. A staple in many West African households, this flavorful soup is great with meat, seafood or veggies. 
                 </p>
                 <a href = "https://izzycooking.com/nigerian-food/" class="readMore" target="_blank">read more</a>
@@ -337,13 +340,13 @@
             <div class="min_wrapper-box">
               <img
                 src="../Assets/food/Nigeria/Puff-Puff-Fried-Dough-683x1024.jpg"
-                alt=""
+                alt="puff puff nigeria food"
                 class="food-img"
               />
 
               <div>
                 <h3 class="food-name">Puff Puff</h3>
-                <p class="food-name">
+                <p class="food-description">
                   Puff puff is a simple yet satisfying Nigerian pastry that will remind you of donut holes. Enjoy these addictive balls as a snack or appetizer.
                 </p>
                 <a href = "https://izzycooking.com/nigerian-food/" class="readMore" target="_blank">read more</a>
@@ -352,8 +355,8 @@
           </div>
 
           <div class="navigate_wrapper">
-            <a href="#" class="navigate next">1</a>
-            <a href="#" class="navigate prev">2</a>
+            <a href="#nigerian-food" class="navigate next active">1</a>
+            <a href="#nigerian-food" class="navigate prev active">2</a>
           </div>
         </div>
       </section>
@@ -404,15 +407,15 @@
               <a href="../index.html" class="quickLinks--link">Home</a>
             </li>
             <li class="footer--listItems">
-              <a href="../pages/about.html" class="quickLinks--link">About</a>
+              <a href="./about.html" class="quickLinks--link">About</a>
             </li>
             <li class="footer--listItems">
               <a href="../index.html#countries-food" class="quickLinks--link"
-                >Menu</a
+                >Countries Food</a
               >
             </li>
             <li class="footer--listItems">
-              <a href="../pages/contact.html" class="quickLinks--link"
+              <a href="./contact.html" class="quickLinks--link"
                 >Contact</a
               >
             </li>
