--- a/pages/thankyou.html
+++ b/pages/thankyou.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/thanks.css">
     <title>Thank you</title>
 </head>
 <body>
-    <h1>thanks</h1>
+    <main class="main">
+        <section class="thanks">
+           <div class="thanks_wrapper">
+            <h1>Thank you for your Suggestion</h1>
+            <a href="../index.html" class="btn btn-color">GO BACK <i class='bx bxs-home-alt-2'></i>  </a>
+           </div>
+        </section>
+    </main>
+    <script>
+        window.addEventListener('load', function(){
+            console.log(window.location.host)
+        })
+       
+    </script>
 </body>
 </html>
